<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">艺站</string>

    <plurals name="error_over_count">
        <item quantity="one">You can only select one media file</item>
        <item quantity="many">You can only select up to %1$d media files</item>
    </plurals>

    <!--===================================Login============================-->
    <string name="login_phone_hint">请输入11位手机号码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_sign_in">登录</string>
    <string name="login_register_account">注册账号</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_agreement_textview">我已阅读并同意</string>
    <string name="login_agreement">《演艺招聘用户协议》</string>
    <string name="login_quick_login">第三方快捷登录</string>

    <!--===================================Register============================-->
    <string name="register_new_user_register">新用户注册</string>
    <string name="register_get_verification_code">获取验证码</string>
    <string name="register_verification_code_hint">请输入验证码</string>
    <string name="register_register">注册</string>

    <!--===================================Register============================-->
    <string name="forget_reset_password">重置密码</string>
    <string name="forget_new_password_hint">请输入新密码</string>
    <string name="forget_complete">完成</string>

    <!--===================================BindPhone============================-->
    <string name="bind_phone">绑定手机</string>
    <string name="enter_mobile_phone_number">请输入要绑定的手机号码</string>
    <string name="determine">确定</string>
    <string name="clean">取消</string>

    <!--===================================Main============================-->
    <string name="main_rb_home">信息广场</string>
    <string name="main_rb_show">演员展示</string>
    <string name="main_rb_release">发布</string>
    <string name="main_rb_status">动态圈</string>
    <string name="main_rb_mine">我的</string>

    <!--===================================Home============================-->
    <string name="home_keyword_search">请输入关键字进行搜索</string>
    <string name="home_recruitment_information">招募信息</string>
    <string name="home_other_requirements">其他要求：</string>
    <string name="home_enrolment">已报名：</string>
    <string name="home_communicate">沟通</string>
    <string name="home_sign_up_immediately">立即报名</string>
    <string name="home_is_sign_up_immediately">是否立即报名？</string>
    <string name="home_sort">排序</string>

    <!--===================================Group============================-->
    <string name="group_city">城市</string>
    <string name="group_age">年龄</string>
    <string name="group_gender">性别</string>
    <string name="group_high_age">最高年龄</string>
    <string name="group_low_age">最低年龄</string>
    <string name="group_determine">确定</string>
    <string name="group_woman">女</string>
    <string name="group_man">男</string>
    <string name="group_detail_gender">性别：</string>
    <string name="group_detail_age">年龄：</string>
    <string name="group_detail_city">城市：</string>
    <string name="group_detail_height">身高：</string>
    <string name="group_detail_weight">体重：</string>
    <string name="group_detail_three_circles">三围：</string>
    <string name="group_detail_weChat">微信：</string>
    <string name="group_detail_telephone">电话：</string>
    <string name="group_detail_photo_display">照片展示</string>
    <string name="group_detail_video_display">视频展示</string>
    <string name="group_detail_other_experiences">其他经历</string>
    <string name="group_detail_instant_communication">立即沟通</string>
    <string name="group_real_name_authentication">实名认证</string>
    <string name="group_real_name">真实姓名</string>
    <string name="group_ID_number">身份证号</string>
    <string name="group_submission">提交</string>
    <string name="group_your_real_name_hint">请输入真实姓名</string>
    <string name="group_your_ID_number_hint">请输入18位身份证号码</string>
    <string name="group_chat">发起群聊</string>
    <string name="group_toolbar_transferee">已录用</string>
    <string name="group_toolbar_transfer">待录用</string>
    <string name="group_clean_employment">取消录用</string>
    <string name="group_search_name">搜索姓名</string>

    <!--===================================release============================-->
    <string name="release_recruitment">发布招募</string>
    <string name="release_title">标题</string>
    <string name="release_label">标签</string>
    <string name="release_number">人数</string>
    <string name="release_wages">工资</string>
    <string name="release_working_hours">工作时间</string>
    <string name="release_set_time">集合时间</string>
    <string name="release_collection_place">集合地点</string>
    <string name="release_deadline_for_Registration">报名截止时间</string>
    <string name="release_other_requirements">其他要求</string>
    <string name="release_title_hint">请输入标题</string>
    <string name="release_add_label_hint">添加标签</string>
    <string name="release_work_number_hint">请输入工作需要的人数</string>
    <string name="release_wages_hint">请输入工资，以人/日计算</string>
    <string name="release_face_to_face_hint">面议</string>
    <string name="release_work_time_hint">请输入工作时间，以天计算</string>
    <string name="release_selection_time_hint">请选择时间</string>
    <string name="release_selection_city_hint">请选择城市</string>
    <string name="release_detailed_location_hint">请输入详细地点</string>
    <string name="release_other_requirements_hint">请输入其他要求</string>
    <string name="release_confirm_publication">确定发布</string>
    <string name="release_add_label">请输入标签内容</string>
    <string name="release_creat_label">创建标签</string>
    <string name="release_perfect_information">请完善您的基本资料</string>
    <string name="release_year">年</string>
    <string name="release_month">月</string>
    <string name="release_day">日</string>
    <string name="release_hour">时</string>
    <string name="release_minute">分</string>

    <!--===================================我的资料============================-->

    <string name="mine_editing_personal_data">编辑个人资料</string>
    <string name="mine_share_business_cards">分享名片</string>
    <string name="mine_recruit">我的招募</string>
    <string name="mine_dynamic">我的动态</string>
    <string name="mine_sign_up">我的报名</string>
    <string name="mine_share">我要分享</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="mine_wechat_service">微信客服</string>
    <string name="mine_logot">退出登录</string>
    <string name="mine_data">我的资料</string>
    <string name="mine_preservation">保存</string>
    <string name="mine_basic_data">基本资料</string>
    <string name="mine_head">头像</string>
    <string name="mine_name">姓名</string>
    <string name="mine_gender">性别</string>
    <string name="mine_age">年龄</string>
    <string name="mine_telePhone">电话</string>
    <string name="mine_weChat">微信</string>
    <string name="mine_height">身高(CM)</string>
    <string name="mine_weight">体重(KG)</string>
    <string name="mine_three_circles">三围(CM)</string>
    <string name="mine_citiy">城市</string>
    <string name="mine_name_hint">请输入真实姓名</string>
    <string name="mine_age_hint">请输入年龄</string>
    <string name="mine_weChat_hint">请输入微信号</string>
    <string name="mine_height_hint">请输入身高</string>
    <string name="mine_weight_hint">请输入体重</string>
    <string name="mine_bust_hint">请输入胸围</string>
    <string name="mine_waist_hint">请输入腰围</string>
    <string name="mine_hipline_hint">请输入臀围</string>
    <string name="mine_citiy_hint">请选择城市</string>
    <string name="mine_photo_video">照片及视频</string>
    <string name="mine_master_graph">主图 </string>
    <string name="mine_master_graph_hint">（将在演员展示页面进行显示）</string>
    <string name="mine_photo">照片</string>
    <string name="mine_photo_hint">（最多可上传4张照片）</string>
    <string name="mine_video">视频</string>
    <string name="mine_video_hint">（最多可上传1个视频，大小不超过100兆）</string>
    <string name="mine_other">其他经历</string>
    <string name="mine_other_hint">请输入其他经历</string>
    <string name="mine_make_your_comments">请提出您的宝贵意见...</string>
    <string name="mine_sign_up_clean">取消报名</string>

    <string name="logo_name">艺站</string>
    <string name="about_us">艺站是一个真实可靠的影视演员招募与信息发布平台， 发布信息与招募演员为一体。我们的信息都是由实名 认证者发布，在经过多重核查，您可以一手掌握影视 招募的所有信息。我们的演员都是信息资料齐全，百 里挑一。我们希望每一位用艺站的老师都可以体会到 艺站的一站式服务。 </string>
    <string name="vision">版本号：1.0</string>

    <string name="mine_next_frame">下架</string>
    <string name="mine_up_frame">上架</string>
    <string name="mine_personnel_recruitment">人员录用</string>
    <string name="mine_editorial_recruitment_information">编辑招募信息</string>
    <string name="mine_refuse">拒绝</string>
    <string name="mine_employment">录用</string>

    <!--===================================动态圈============================-->

    <string name="dynamic_full_text">全文</string>
    <string name="dynamic_share">分享</string>
    <string name="dynamic_comment">评论</string>
    <string name="dynamic_give_thumbs_up">点赞</string>
    <string name="to_expand_hint">全文</string>
    <string name="to_shrink_hint">收起</string>
    <string name="dynamic_details">详情</string>
    <string name="dynamic_wonderful_commentary">精彩评论</string>
    <string name="dynamic_send">发送</string>
    <string name="dynamic_send_content">说点什么吧！</string>
    <string name="dynamic_release">发布动态</string>
    <string name="dynamic_release_content">输入你想要发布的内容~</string>
    <string name="dynamic_delete_title">确定删除吗？</string>

    <!--===================================我要分享============================-->

    <string name="share_wechat">微信好友</string>
    <string name="share_circle_of_friends">朋友圈</string>
    <string name="share_qq_zone">QQ空间</string>
    <string name="share_qq">QQ好友</string>

    <!--===================================错误提示============================-->

    <string name="exception_tip_illegal_argument">缺少传递相应参数</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_sex">请选择性别</string>
    <string name="input_tel">请输入电话号码</string>
    <string name="apply_input_all">应聘需填写所有内容</string>
    <string name="bind_phone_hint">请输入要绑定的手机号码</string>
    <string name="cancle">取消</string>
    <string name="full_retire">人员已满, 是否继续录用？</string>
    <string name="sure">确定</string>
    <string name="groupset">群设置</string>
    <string name="groupname">群昵称</string>

</resources>
