<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.mine.activity.AboutUsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/about_us_return_imageview"
            android:layout_width="@dimen/x34"
            android:layout_height="@dimen/y34"
            android:src="@mipmap/nav_arrow"
            android:layout_marginLeft="@dimen/x34"
            android:layout_marginTop="@dimen/y68"
            android:layout_marginBottom="@dimen/y28"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_about_us"
            android:textSize="18sp"
            android:textColor="@color/color_33353a"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/about_us_return_imageview"
            app:layout_constraintBottom_toBottomOf="@+id/about_us_return_imageview"/>

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:layout_width="@dimen/x246"
        android:layout_height="@dimen/y246"
        android:src="@mipmap/logo_app"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/y56"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_name"
        android:textSize="22sp"
        android:textColor="@color/color_33353a"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/y6"
        android:layout_gravity="center"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/y2"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:layout_marginTop="@dimen/y40"
        android:background="@color/color_f0f2f4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginRight="@dimen/x50"
        android:layout_marginTop="@dimen/y40"
        android:text="@string/about_us"
        android:textSize="14sp"
        android:textColor="@color/color_545859"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/vision"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:layout_marginBottom="@dimen/y58"/>

</LinearLayout>